<resources>
    <string name="app_name">Otomax Photos</string>
    <string name="share_image">Share Image</string>
    <string name="filter">Filter</string>
    <string name="title">Title</string>
    <string name="image_choosed">%d Image Choosed</string>
    <string name="close">close</string>
    <string name="share_via">Share Via:</string>
    <string name="tap_to_retry">Tap to Retry</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="select_item">Select Item</string>
    <string name="kategori">Kategori</string>
    <string name="otomaxpos_photos">Otomax Photos</string>
    <string name="loading">Loading</string>
    <string name="nama">Nama</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="harga_beli">Harga Beli</string>
    <string name="ring">Ring</string>
    <string name="lebar">Lebar</string>
    <string name="et">Et</string>
    <string name="pcd">Pcd</string>
    <string name="ukuran_ban">Ukuran Ban</string>
    <string name="aksesoris">Aksesoris</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="loadings">Loading...</string>
    <string name="no_data">No Data</string>
    <string name="cart">Cart</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="_1">1</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="subtotal_0">Subtotal: 0</string>
    <string name="subtotal_beli">"Subtotal Harga Beli: %1$s"</string>
    <string name="subtotal_jual">"Subtotal Harga Jual: %1$s"</string>
    <string name="subtotal">"Subtotal: %1$s"</string>
    <string name="harga">Harga</string>
    <string name="modal">Modal</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="lihat_modal">Lihat Modal</string>
</resources>