<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <ImageView
        android:id="@+id/imageViewDetail"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/placeholder"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/textViewNama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/harga_beli"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/textViewHargaBeli"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/harga_beli"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/harga_jual"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/textViewHargaJual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/harga_jual"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_weight="1"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        android:background="#03A9F4" />

</LinearLayout>